[gd_scene load_steps=10 format=3 uid="uid://dvuv0gc7ng3px"]

[ext_resource type="Script" path="res://scenes/tree_patch.gd" id="1_um38r"]

[sub_resource type="PlaceholderMesh" id="PlaceholderMesh_re5kl"]

[sub_resource type="PlaceholderMesh" id="PlaceholderMesh_eiows"]

[sub_resource type="Curve" id="Curve_u4bmj"]
_data = [Vector2(0, 0), 0.0, 8.76694, 0, 0, Vector2(0.378676, 1), 0.0, 0.0, 0, 0, Vector2(0.764706, 0.136364), 0.0, 0.0, 0, 0, Vector2(1, 0.136364), -0.197818, 0.0, 0, 0]
point_count = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ii0a2"]
cull_mode = 2
albedo_color = Color(0.207843, 0.419608, 0.145098, 1)
metallic_specular = 0.0

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_h34fg"]
material = SubResource("StandardMaterial3D_ii0a2")
curve = SubResource("Curve_u4bmj")

[sub_resource type="MultiMesh" id="MultiMesh_w742j"]
transform_format = 1
instance_count = 183
mesh = SubResource("PlaceholderMesh_re5kl")
buffer = PackedFloat32Array(1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 15.483, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 15.483, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 15.483)

[sub_resource type="MultiMesh" id="MultiMesh_vh0tl"]
transform_format = 1
instance_count = 183
mesh = SubResource("PlaceholderMesh_eiows")
buffer = PackedFloat32Array(1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 15.483, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 15.483, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 15.483)

[sub_resource type="MultiMesh" id="MultiMesh_d140s"]
transform_format = 1
instance_count = 183
mesh = SubResource("RibbonTrailMesh_h34fg")
buffer = PackedFloat32Array(1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, -5.955, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, -4.764, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, -3.573, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, -2.382, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, -1.191, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 1.191, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 2.382, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 3.573, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 4.764, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 5.955, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 7.146, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 8.337, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 9.528, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 10.719, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 11.91, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 13.101, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, -2.382, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, -1.191, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, 1.191, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, 2.382, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, 3.573, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, 4.764, 0, 1, 0, 1, 0, 0, 1, 14.292, 1, 0, 0, -5.955, 0, 1, 0, 1, 0, 0, 1, 15.483, 1, 0, 0, -4.764, 0, 1, 0, 1, 0, 0, 1, 15.483, 1, 0, 0, -3.573, 0, 1, 0, 1, 0, 0, 1, 15.483)

[node name="TreePatch" type="Node3D"]
script = ExtResource("1_um38r")
amount = 183
rows = 10
spacing = 1.191
leave_mesh = SubResource("PlaceholderMesh_re5kl")
trunk_mesh = SubResource("PlaceholderMesh_eiows")
tree_mesh = SubResource("RibbonTrailMesh_h34fg")

[node name="LeavesMultiMesh" type="MultiMeshInstance3D" parent="."]
multimesh = SubResource("MultiMesh_w742j")

[node name="TrunksMultiMesh" type="MultiMeshInstance3D" parent="."]
multimesh = SubResource("MultiMesh_vh0tl")

[node name="TreeMultiMesh" type="MultiMeshInstance3D" parent="."]
multimesh = SubResource("MultiMesh_d140s")
